tests/ui/keyword/keyword-super.rs
fn main() {
    let super: isize; //~ ERROR failed to resolve: there are too many leading `super` keywords
}

// ferrocene-annotations: fls_7bxv8lybxm18
// Identifier Patterns
